gthreadpool: Don't pass bad data to GThreadPool sorter

This causes sorters to crash.

https://bugzilla.gnome.org/show_bug.cgi?id=711756